# CardFlow

./: .dockerignore  .gitignore  CONTEXT.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.mcp  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: auth.rs  errors.rs  main.rs  middleware.rs
backend/src/db/: mod.rs
backend/src/db/migrations/: 0001_init.sql  0002_auth.sql  0003_api_tokens.sql  0004_oauth_tokens.sql
backend/src/models/: api_token.rs  card.rs  card_joker.rs  deck.rs  game.rs  mod.rs  oauth_token.rs  user.rs
backend/src/routes/: api_tokens.rs  auth.rs  cards.rs  decks.rs  games.rs  mod.rs  oauth.rs  setup.rs  users.rs
frontend/: nginx.conf  package-lock.json  vite.config.ts
frontend/src/: app.css
frontend/src/lib/: api.ts  stack.ts  stores.ts
frontend/src/lib/components/: Card.svelte  CardDetailModal.svelte  CardEditor.svelte  Deck.svelte  EntitySelector.svelte  Game.svelte  HandCard.svelte  LoginForm.svelte  PileCard.svelte  RevealTokenModal.svelte  TopBar.svelte
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/oauth/authorize/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/setup/: +page.svelte
mcp/: Cargo.toml
mcp/src/: cardflow_client.rs  main.rs  oauth.rs  tools.rs
